# eshipster

./: Cargo.toml  ess-basic  readme.md
docker/: docker-compose.yml
src/: client.rs  config.rs  data.rs  env.rs  exporter.rs  main.rs  processor.rs  receiver.rs
src/client/: auth.rs  elasticsearch.rs  host.rs  setup.rs
src/client/elasticsearch/: index_template.rs
src/data/: data_streams.rs  elasticsearch_api.rs  indices_settings.rs  nodes.rs  shards.rs
src/exporter/: elasticsearch.rs  file.rs  stream.rs
src/processor/: index_stats.rs  lookup.rs
src/processor/lookup/: data_stream.rs  index_settings.rs  node.rs
src/receiver/: directory.rs  elasticsearch.rs  file.rs
test/assets/: indices_stats.json
test/assets/kibana/: eshipster.ndjson
