[package]
name = "eshipster"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
license-file = "LICENSE.txt"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
color-eyre = "0.6.3"
elasticsearch = "8.15.0-alpha.1"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "^1.0.199", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tokio = "1.40.0"
url = { version = "^2.5.0", features = ["serde"] }
